[gd_scene load_steps=22 format=3 uid="uid://ela3ol1lqpt7"]

[ext_resource type="Script" uid="uid://43nlv1fag8nm" path="res://scripts/game_loop_handler.gd" id="1_i5y3l"]
[ext_resource type="Script" uid="uid://bh1reks2agiq5" path="res://scripts/environment.gd" id="2_aag8u"]
[ext_resource type="Script" path="res://scripts/NavigationMesh.gd" id="3_ahfbr"]
[ext_resource type="Script" uid="uid://dqkdol1omhl6q" path="res://scripts/map_loader.gd" id="4_fy66r"]
[ext_resource type="Script" uid="uid://b4omdjrnb0gso" path="res://scripts/enemy_spawner.gd" id="5_wyea1"]
[ext_resource type="Script" uid="uid://dyamhf5x7d64o" path="res://scripts/utility/editor_only.gd" id="6_moahq"]
[ext_resource type="Script" uid="uid://bi12xtbot7xcv" path="res://scripts/camera.gd" id="7_3lyom"]
[ext_resource type="Script" uid="uid://1ha0yk0xfwla" path="res://scripts/placement_handler.gd" id="8_rij6i"]
[ext_resource type="PackedScene" uid="uid://dmjrrpq5hre60" path="res://scenes/wagons/wagon_barricade.tscn" id="9_3imvf"]
[ext_resource type="PackedScene" uid="uid://cdld48i2gfx8s" path="res://scenes/wagons/wagon_archer.tscn" id="10_u78cl"]
[ext_resource type="PackedScene" uid="uid://flemoc77kr28" path="res://scenes/wagons/wagon_money.tscn" id="11_6k2bg"]
[ext_resource type="PackedScene" path="res://scenes/PostProcessing.tscn" id="12_44qba"]
[ext_resource type="ArrayMesh" uid="uid://bmksaghu3xk6k" path="res://meshes/humans/human_base.obj" id="13_gmxyp"]
[ext_resource type="Shader" uid="uid://dinex0pt02ggc" path="res://shaders/ps1_models.gdshader" id="14_d2o8o"]
[ext_resource type="PackedScene" uid="uid://c5shvswlu7ue5" path="res://scenes/ui/health_bar_canvas.tscn" id="15_vn13o"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_muem4"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_dp3eg"]
sky_material = SubResource("ProceduralSkyMaterial_muem4")

[sub_resource type="Environment" id="Environment_0ld40"]
background_mode = 2
background_energy_multiplier = 0.5
sky = SubResource("Sky_dp3eg")
tonemap_mode = 2

[sub_resource type="NavigationMesh" id="NavigationMesh_o6xl0"]

[sub_resource type="TextMesh" id="TextMesh_choun"]
text = "SPAWN"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_choun"]
render_priority = 0
shader = ExtResource("14_d2o8o")
shader_parameter/color_tint = Vector3(1, 1, 1)
shader_parameter/texture_tile = Vector2(1, 1)
shader_parameter/snap_enabled = true
shader_parameter/snap_resolution = 250.0

[node name="main" type="Node"]

[node name="GameLoopHandler" type="Node" parent="."]
script = ExtResource("1_i5y3l")

[node name="Environment" type="Node" parent="."]
script = ExtResource("2_aag8u")

[node name="OmniLight3D" type="OmniLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00520873, 2.62407, 0.196077)
light_energy = 2.0
shadow_enabled = true
shadow_opacity = 0.5
shadow_blur = 10.0
omni_range = 10.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.804324, -5.51327e-07, -0.594191, 0.358686, 0.797247, 0.485532, 0.473717, -0.603653, 0.641245, 0, 10, 0)
light_energy = 0.2
light_indirect_energy = 0.5
light_volumetric_fog_energy = 0.5
shadow_opacity = 0.5
shadow_blur = 3.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_0ld40")

[node name="NavigationMesh" type="NavigationRegion3D" parent="."]
unique_name_in_owner = true
navigation_mesh = SubResource("NavigationMesh_o6xl0")
script = ExtResource("3_ahfbr")

[node name="MapLoader" type="Node3D" parent="NavigationMesh"]
unique_name_in_owner = true
script = ExtResource("4_fy66r")

[node name="EnemySpawner" type="Node3D" parent="NavigationMesh"]
unique_name_in_owner = true
script = ExtResource("5_wyea1")

[node name="SpawnPoints" type="Node3D" parent="NavigationMesh/EnemySpawner"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="SpawnPoint_1" type="Node3D" parent="NavigationMesh/EnemySpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 0, 0)

[node name="Visualisation" type="MeshInstance3D" parent="NavigationMesh/EnemySpawner/SpawnPoints/SpawnPoint_1"]
mesh = SubResource("TextMesh_choun")
script = ExtResource("6_moahq")

[node name="SpawnPoint_2" type="Node3D" parent="NavigationMesh/EnemySpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, -17)

[node name="Visualisation" type="MeshInstance3D" parent="NavigationMesh/EnemySpawner/SpawnPoints/SpawnPoint_2"]
mesh = SubResource("TextMesh_choun")
script = ExtResource("6_moahq")

[node name="SpawnPoint_3" type="Node3D" parent="NavigationMesh/EnemySpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -19.9295)

[node name="Visualisation" type="MeshInstance3D" parent="NavigationMesh/EnemySpawner/SpawnPoints/SpawnPoint_3"]
mesh = SubResource("TextMesh_choun")
script = ExtResource("6_moahq")

[node name="SpawnPoint_4" type="Node3D" parent="NavigationMesh/EnemySpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.6726, 0, -16.4386)

[node name="Visualisation" type="MeshInstance3D" parent="NavigationMesh/EnemySpawner/SpawnPoints/SpawnPoint_4"]
mesh = SubResource("TextMesh_choun")
script = ExtResource("6_moahq")

[node name="SpawnPoint_5" type="Node3D" parent="NavigationMesh/EnemySpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.9497, 0, 0)

[node name="Visualisation" type="MeshInstance3D" parent="NavigationMesh/EnemySpawner/SpawnPoints/SpawnPoint_5"]
mesh = SubResource("TextMesh_choun")
script = ExtResource("6_moahq")

[node name="SpawnPoint_6" type="Node3D" parent="NavigationMesh/EnemySpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.0032, 0, 12.9801)

[node name="Visualisation" type="MeshInstance3D" parent="NavigationMesh/EnemySpawner/SpawnPoints/SpawnPoint_6"]
mesh = SubResource("TextMesh_choun")
script = ExtResource("6_moahq")

[node name="SpawnPoint_7" type="Node3D" parent="NavigationMesh/EnemySpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 18.7162)

[node name="Visualisation" type="MeshInstance3D" parent="NavigationMesh/EnemySpawner/SpawnPoints/SpawnPoint_7"]
mesh = SubResource("TextMesh_choun")
script = ExtResource("6_moahq")

[node name="SpawnPoint_8" type="Node3D" parent="NavigationMesh/EnemySpawner/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.2099, 0, 14.1993)

[node name="Visualisation" type="MeshInstance3D" parent="NavigationMesh/EnemySpawner/SpawnPoints/SpawnPoint_8"]
mesh = SubResource("TextMesh_choun")
script = ExtResource("6_moahq")

[node name="CameraManager" type="Node3D" parent="."]
script = ExtResource("7_3lyom")

[node name="Perspective" type="Camera3D" parent="CameraManager"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 4, 6, 4)
fov = 40.0

[node name="TopDown" type="Camera3D" parent="CameraManager"]
transform = Transform3D(0.707107, -0.707107, -3.09086e-08, 0, -4.37114e-08, 1, -0.707107, -0.707107, -3.09086e-08, 0, 6, 0)
visible = false

[node name="PlacementHandler" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("8_rij6i")

[node name="InactiveObjectHolder" type="Node3D" parent="PlacementHandler"]
visible = false

[node name="ActiveObjectHolder" type="Node3D" parent="PlacementHandler"]

[node name="Wagon_Barricade" parent="PlacementHandler/ActiveObjectHolder" instance=ExtResource("9_3imvf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.54325)

[node name="Wagon_Barricade2" parent="PlacementHandler/ActiveObjectHolder" instance=ExtResource("9_3imvf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.54325)

[node name="Wagon_Archer" parent="PlacementHandler/ActiveObjectHolder" instance=ExtResource("10_u78cl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.55225)

[node name="Wagon_Archer2" parent="PlacementHandler/ActiveObjectHolder" instance=ExtResource("10_u78cl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.55225)

[node name="Wagon_Money" parent="PlacementHandler/ActiveObjectHolder" instance=ExtResource("11_6k2bg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.31666)

[node name="PostProcessing" parent="." instance=ExtResource("12_44qba")]

[node name="HumanBase" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0362556, -0.0119693, -0.145683)
mesh = ExtResource("13_gmxyp")
surface_material_override/0 = SubResource("ShaderMaterial_choun")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="HealthBarCanvas" parent="." instance=ExtResource("15_vn13o")]
